--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular": "1.4.8",
-    "angular-route": "1.4.8"
+    "angular-route": "1.4.8",
+    "http-server": "0.8.5"
   }
 }
