--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "angular": "1.4.8",
     "angular-route": "1.4.8",
-    "http-server": "0.8.5"
+    "http-server": "0.8.5",
+    "plotly.js": "1.4.1"
   }
 }
