--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular": "1.4.8",
+    "angular-cookies": "^1.4.9",
     "angular-route": "1.4.8",
     "http-server": "0.8.5",
     "plotly.js": "1.4.1"
