--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,10 @@
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
     "angular-environment": "^1.0.3",
-    "angular-validation-match": "^1.7.1"
+    "angular-validation-match": "^1.7.1",
+    "lodash": "^4.5.1",
+    "angular-google-maps": "^2.3.2",
+    "angularjs-slider": "^2.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
