--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,9 @@
     "angular-validation-match": "^1.7.1",
     "lodash": "^4.5.1",
     "angular-google-maps": "^2.3.2",
-    "angularjs-slider": "^2.9.0"
+    "angularjs-slider": "^2.9.0",
+    "c3-angular": "^1.2.0",
+    "angular-i18n": "^1.5.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
