--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "angular-google-maps": "^2.3.2",
     "angularjs-slider": "^2.9.0",
     "c3-angular": "^1.2.0",
-    "angular-i18n": "^1.5.3"
+    "angular-i18n": "^1.5.3",
+    "angular-ui-grid": "^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
