--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angularjs-slider": "^2.9.0",
     "c3-angular": "^1.2.0",
     "angular-i18n": "^1.5.3",
-    "angular-ui-grid": "^3.1.1"
+    "angular-ui-grid": "^3.1.1",
+    "highcharts": "^4.2.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
