--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,10 @@
     "c3-angular": "^1.2.0",
     "angular-i18n": "^1.5.3",
     "angular-ui-grid": "^3.1.1",
-    "highcharts": "^4.2.5"
+    "highcharts": "^4.2.5",
+    "datetimeRangePicker": "^1.3.0",
+    "angular-bootstrap": "^1.3.3",
+    "angular-slider": "venturocket-angular-slider#^0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
